Added the update function to the project
