# swagger/v1/swagger.yaml
@@ -56,6 +56,39 @@ paths:
       responses:
         '200':
           description: successful
+    patch:
+      summary: update transaction
+      responses:
+        '200':
+          description: successful
+    put:
+      summary: update transaction
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                customer_id:
+                  type: integer
+                input_amount:
+                  type: number
+                input_currency:
+                  type: string
+                output_amount:
+                  type: number
+                output_currency:
+                  type: string
+              required:
+              - customer_id
+              - input_amount
+              - input_currency
+              - output_amount
+              - output_currency
 servers:
 - url: http://127.0.0.1:3000
   description: Development environment
